sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:6: error: not found: value getNombreValeur
  while (swapped || getNombreValeur) {
                    ^